# ViT_from_scratch

./: .gitignore  README.md
.github/workflows/: python-package.yml
application/: CMakeLists.txt  build.sh
application/src/: main.cpp
artifacts/: model.pt  model_ts.pt
python/: train.py  utils.py
python/models/: cnn_vit.py  simple_vit.py
python/test/: test_vit.py
vit/: evaluate_.py  train.py
vit/config/: vit_config.yaml
vit/dataset/: mnist_dataset.py  mnist_dataset_.py
vit/models/: cls_loss.py  vit.py
vit/utils/: misc.py  trainer.py  trainer_base.py
